--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,3 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap");
+@font-face {
+  font-family: "Menlo Regular";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Menlo Regular"),
+    url(./reusables/Menlo-Regular.woff) format("woff");
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -17,7 +26,7 @@ code {
   margin: 100px;
   align-items: center;
   flex-direction: column;
-  font-family: "Courier New", monospace;
+  font-family: "Menlo Regular";
 }
 
 input,
@@ -32,7 +41,7 @@ input {
 
 .submit-button {
   border-radius: 20px;
-  border: 1px solid #ffadad;
+  border: 0px;
   width: 250px;
   height: 40px;
   background-color: #ffadad;
@@ -54,6 +63,38 @@ input {
 .message-container {
   background-color: white;
   margin-top: 30px;
+}
+
+.message {
+  overflow-wrap: break-word;
+}
+
+.likes-container {
+  display: flex;
+  align-items: baseline;
+}
+
+.likes-container p {
+  margin: 0;
+  color: #cdcdcd;
+  margin-left: 5px;
+}
+
+.time-hearts-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.heart {
+  background-color: #eaeaea;
+  border: 0px;
+  border-radius: 50%;
+  width: 33px;
+  height: 33px;
+  text-align: center;
+  margin: 0;
+  cursor: pointer;
 }
 
 .form {
