--- a/code/src/index.css
+++ b/code/src/index.css
@@ -18,7 +18,7 @@ body {
 }
 
 .thought-form, .thought-card {
-  width: 500px;
+  width: 600px;
   border: 2px solid rgba(0, 0, 0, 0.479);
   margin-bottom: 40px;
   box-shadow: 5px 5px;
@@ -28,6 +28,40 @@ body {
 .thought-form {
   height: 200px;
   margin-top: 70px;
+}
+
+.form-title {
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+
+.form-input {
+  width: 100%;
+  height: 70px;
+  border: 1px solid rgba(0, 0, 0, 0.322);
+  overflow-wrap: break-word;
+  padding: 10px;
+  font-size: 16px;
+}
+
+.form-button {
+  width: 260px;
+  height: 40px;
+  border: none;
+  background-color: #ffadad;
+  border-radius: 40px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 0 20px;
+  font-size: 16px;
+  margin: 15px 0;
+  cursor: pointer;
+}
+
+.form-button:hover {
+  background-color: #fdcfcf;
 }
 
 .thought-card {
