--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,10 +11,35 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
-
-
-.message-input{
-  display: flex;
-  justify-content: flex-end;
+.form-wrapper {
+  margin: auto;
+  padding: 30px 0;
+  width: 300px;
+  max-width: 500px;
+}
+.send-message-card {
+  /* width: 200px; */
+ 
+  background-color: #F2F0F0;
+  border: 1px solid black;
+  box-shadow: 5px 5px black;
+  padding: 10px;
+  margin: 0;
+}
+.input-field { 
+  width:80%;
+  
+  overflow-wrap: break-word;
+  background-color: #ffffff;
+  margin: 20px;
+}
+.submit-button {
+  background-color: #FFADAD;
+}
+.GET-message {
+  overflow-wrap: break-word;
+}
+.date {
+  font-size: 12px;
+  font-style: italic;
 }
