--- a/code/src/index.css
+++ b/code/src/index.css
@@ -26,7 +26,7 @@ body {
 }
 
 .thought-form {
-  height: 200px;
+  height: 230px;
   margin-top: 70px;
 }
 
@@ -45,6 +45,18 @@ body {
   font-size: 16px;
 }
 
+.the-count {
+  text-align: right;
+}
+
+.black-counter {
+  color: #000;
+}
+
+.black-counter {
+  color: rgb(221, 0, 0);
+}
+
 .form-button {
   width: 260px;
   height: 40px;
@@ -58,6 +70,7 @@ body {
   font-size: 16px;
   margin: 15px 0;
   cursor: pointer;
+  outline: none;
 }
 
 .form-button:hover {
