--- a/code/src/index.css
+++ b/code/src/index.css
@@ -9,6 +9,7 @@
 body {
   margin: 0 auto;
   font-family: 'Roboto Mono', monospace;
+  background: #fde5e5;
 }
 
 .main-wrapper {
@@ -23,6 +24,7 @@ body {
   margin-bottom: 40px;
   box-shadow: 5px 5px;
   padding: 15px;
+  background: #f8f8f8;
 }
 
 .thought-form {
@@ -71,6 +73,7 @@ body {
   margin: 15px 0;
   cursor: pointer;
   outline: none;
+  color: #000;
 }
 
 .form-button:hover {
