--- a/code/src/components/Thought/Thought.css
+++ b/code/src/components/Thought/Thought.css
@@ -3,6 +3,8 @@
   box-shadow: 10px 10px black;
   margin: 20px;
   padding: 20px;
+  display:flex;
+  flex-direction: column;
 }
 
 .card--footer {
@@ -14,8 +16,7 @@
   color: grey;
   font-size: 14px;
   display: inline;
-  margin: 0 10px;
-  
+  margin: 0 10px;  
 }
 
 .card--like-count {
