--- a/code/src/index.css
+++ b/code/src/index.css
@@ -4,3 +4,16 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+
+/* ------------------------------- TYPOGRAPHY ------------------------------- */
+
+/* Setting the general element font-sizes and style */
+* {
+  font-size: 16px;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+label, p {
+  font-size: 1.4em;
+}
