--- a/code/src/index.css
+++ b/code/src/index.css
@@ -127,6 +127,21 @@ p {
   transform: none;
 }
 
+.like-counter {
+  width: 100%;
+  border-top: 1px solid black;
+  background-color: rgb(235, 235, 235);
+  padding: 10px 0;
+  box-sizing: border-box;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+}
+
+.like-counter span {
+  margin: 0 5px;
+}
+
 @media (min-width: 667px) {
   form,
   .thought {
