--- a/code/src/index.css
+++ b/code/src/index.css
@@ -46,9 +46,14 @@ form,
   width: 80%;
   max-width: 400px;
   border: 1px solid black;
-  box-shadow: 5px 5px 0 black;
+  box-shadow: 8px 8px 0 black;
   margin: 10px;
-  padding: 20px;
+  padding: 20px;  
+  /* box-sizing: border-box; */
+}
+
+.thought:last-of-type {
+  margin-bottom: 60px;
 }
 
 form {
@@ -132,7 +137,7 @@ p {
   border-top: 1px solid black;
   background-color: rgb(235, 235, 235);
   padding: 10px 0;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   text-align: center;
   position: fixed;
   bottom: 0;
@@ -146,5 +151,13 @@ p {
   form,
   .thought {
     margin: 20px;
+  }
 }
+@media (min-width: 667px) {
+  .like-counter {
+    max-width: 480px;
+    padding-right: 8px;
+    border: 1px solid black;
+    border-bottom: none;
+  }
 }
