--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,10 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&family=Roboto:wght@400;500&display=swap');
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -48,8 +46,7 @@ form,
   border: 1px solid black;
   box-shadow: 8px 8px 0 black;
   margin: 10px;
-  padding: 20px;  
-  /* box-sizing: border-box; */
+  padding: 20px;
 }
 
 .thought:last-of-type {
@@ -57,13 +54,18 @@ form,
 }
 
 form {
-  background-color: rgb(235, 235, 235);
+  background-color: rgb(240, 240, 240);
   display: flex;
   flex-direction: column;
 }
 
+form label {
+  font-weight: 500;
+}
+
 form input {
   font-family: 'Roboto Mono', monospace;
+  font-weight: 500;
   margin-top: 15px;
   padding: 10px 10px 30px;
 }
@@ -74,15 +76,27 @@ form input {
 
 form button {
   width: 50%;
+  min-width: 200px;
   border: none;
   border-radius: 20px;
   padding: 10px;
   margin-top: 15px;
   background-color: pink;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 form button:hover {
   transform: scale(1.1);
+}
+
+form p {
+  font-size: 14px;
+  padding: 5px 0 0 5px;
 }
 
 p {
@@ -91,6 +105,7 @@ p {
 
 .thought-message {
   font-family: 'Roboto Mono', monospace;
+  font-weight: 500;
   overflow-wrap: break-word;
 }
 
