--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,181 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader-container {
+  width: 100px;
+  height: 100px;
+  margin-top: 200px;
+  border: 10px solid #C2C2C2;
+  border-radius: 50%;
+  border-top: 10px solid #FFADAD;
+  animation: load 4s linear infinite;
+}
+
+@keyframes load {
+  from {
+    transform: rotate(0deg)
+  }
+  to {
+    transform: rotate(360deg)
+  }
+}
+
+/* Form with textarea to send message */
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin: 20px;
+  background-color: #F2F0F0;
+  box-shadow: 7px 7px #000;
+  border: 1px solid #868585;
+}
+
+.form-title {
+  margin: 15px;
+  font-size: 16px;
+  color: #2C2C2C;
+}
+
+.text-area {
+  margin: 0 15px 0 15px;
+  border: 1px solid #C4C4C4;
+  padding: 10px;
+}
+
+.message-number {
+  text-align: right;
+  margin: 5px 15px 0 0;
+  color: #868585;
+  font-size: 13px;
+}
+
+.red {
+  color: red;
+}
+
+.button {
+  margin: 0 0 15px 15px;
+  width: 55%;
+  height: 40px;
+  border-radius: 50px;
+  border: none;
+  background-color: #FFADAD;
+  font-weight: bold;
+  color: #2C2C2C;
+  cursor: pointer;
+  font-size: 12px;
+}
+
+.button:disabled {
+  opacity: 0.5;
+}
+
+.error-message {
+  position: absolute;
+  border: 1px solid #868585;
+  color: #2C2C2C;
+  opacity: 0;
+}
+
+.display {
+  opacity: 1;
+}
+
+/* Hover on button only when possible e.g. not on phones */
+@media (hover:hover) {
+  button:hover {
+    opacity: 0.7;
+  }
+}
+
+/* All the thoughts */
+.thought-container {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin: 15px;
+  box-shadow: 7px 7px #000;
+  border: 1px solid #868585;
+}
+
+.thought-title {
+  font-size: 18px;
+  color: #2C2C2C;
+  margin: 15px;
+  font-family: Monospace, "Courier New";
+}
+
+/* Container with the likes and date when posted */
+.like-and-date {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 15px 10px 15px;
+}
+
+/* Like button with different backgrounds depending on liked or not */
+
+.like-button {
+  padding: 10px;
+  border-radius: 50%;
+  background-color: #EAEAEA;
+  font-size: 16px;
+  margin-right: 5px;
+  cursor: pointer;
+  border: none;
+}
+
+.pink {
+  background-color: #FFADAD;
+}
+
+.gray {
+  background-color: #EAEAEA;
+}
+
+.likes {
+  color: #8F8F8F;
+  font-size: 14px;
+}
+
+.dates {
+  color: #C2C2C2;
+  font-size: 12px;
+  font-family: Monospace, "Courier New";
+}
+
+/* Media queries for tablets and desktops*/
+@media ( min-width: 768px) {
+  .form-container {
+    width: 60%;
+  }
+
+  .button {
+    width: 40%;
+  }
+
+  .thought-container {
+    width: 60%;
+  }
+}
+
+/* Media queries for desktops */
+@media ( min-width: 1025px) {
+  .form-container {
+    width: 30%;
+  }
+
+  .thought-container {
+    width: 30%;
+  }
+}
