--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300&display=swap');
+
 body {
   margin: 40px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -16,19 +18,19 @@ code {
   display: flex;
   flex-direction:column;
   align-items: center;
+  font-family: 'Roboto', sans-serif;
 }
 
 .form-container {
+  display: flex;
+  flex-direction: column;
   border: 1px solid black;
   background-color: whitesmoke;
   width: 380px;
   padding: 15px;
   box-shadow: 5px 5px black;
-}
-
-.input-form-container {
-  display: flex;
-  flex-direction: column;
+  font-size: 20px;
+  font-weight: 500;
 }
 
 input[type=text]{
@@ -61,6 +63,15 @@ input[type=text]{
   display: flex;
   justify-content: space-between;
 }
+
+.likes-icon-count {
+  display: flex;
+}
+
+.likes-icon-count > p {
+  margin-left: 5px;
+}
+
 
 .date {
   font-style: italic;
