--- a/code/src/index.css
+++ b/code/src/index.css
@@ -12,6 +12,22 @@ code {
     monospace;
 }
 
+.main {
+  display: flex; 
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;  
+}
+
+.card-container {
+  display: grid;
+  
+  width: 300px;
+  margin-bottom: 20px;
+  border: 2px solid #000; 
+  box-shadow: 10px 10px #000;
+}
+
 .lds-heart {
   display: inline-block;
   position: relative;
@@ -45,6 +61,7 @@ code {
 .lds-heart div:after {
   top: -24px;
   border-radius: 50% 50% 0 0;
+
 }
 @keyframes lds-heart {
   0% {
