Added loader and spinners library, updated error catching

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -110,3 +110,9 @@ code {
   background: pink;
 }
 
+.spinner-container{
+  width: 80%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+}
