--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Lato&family=Love+Ya+Like+A+Sister&display=swap');
 /* @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap'); */
 
 body {
@@ -25,6 +25,7 @@ code {
   flex-direction: column;
   align-items: center;
 }
+
 
 .newThoughtsContainer {
   display: flex;
