--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,56 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.main-forms-wrapper {
+  max-width: 500px;
+  max-height: 500px;
+  margin: 0 auto;
+
+}
+
+.message-container,
+.submit-message-container {
+  border: black solid 1px;
+  padding: 10px;
+  margin: 20px;
+  box-shadow: black 0 2px 5px 0;
+  font-family: "Courier New";
+  font-size: 18px;
+}
+
+
+
+
+.submit-message-container {
+  background-color: rgb(241, 239, 239);
+  font-family: "Courier New";
+  font-size: 16px;
+}
+
+.label-input-message {
+  margin: 10px;
+}
+.button-submit {
+  background-color: rgb(255, 149, 149);
+  border: none;
+  border-radius: 20px;
+  width: 50%;
+  height: 35px;
+  margin: 10px;
+  font-family:  "Courier New"; 
+}
+.message-input {
+  width: 90%;
+  height: 40px;
+  margin: 10px;
+  font-family: "Courier New";
+  
+}
+
+.date-posted {
+  text-align: end;
+  color: grey;
+  font-family: "Courier New";
+  margin: 10px;
+}
