--- a/code/src/styles/SendThought.css
+++ b/code/src/styles/SendThought.css
@@ -75,10 +75,25 @@
 }
 
 /* Belongs to ThoughtsElement that could be styled together with ... ? */
+.sent-message-container {
+  width: 100%; /*take this away? Would it be smarter to use border box up where the * {} starts ?? */
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  border: 1px solid #000;
+  box-shadow: 5px 5px;
+  margin: 20px auto;
+  /* word-wrap: break-word; */
+}
+
+.sent-message {
+  word-wrap: break-word;
+  margin: 15px;
+}
+
 .heart-likes-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
 }
 
 .heart-button {
@@ -93,3 +108,16 @@
   cursor: pointer;
 }
 
+.heart-button-and-messagecreated-container {
+  margin: 15px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.heart-times-counter {
+  color: #4d4c4c;
+}
+
+.message-created {
+  color: #a09993;
+}
