--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 body {
   margin: 40px;
@@ -18,7 +19,7 @@ code {
   display: flex;
   flex-direction:column;
   align-items: center;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .form-container {
@@ -27,10 +28,10 @@ code {
   border: 1px solid black;
   background-color: whitesmoke;
   width: 380px;
-  padding: 15px;
+  padding: 25px;
   box-shadow: 5px 5px black;
-  font-size: 20px;
-  font-weight: 500;
+  font-size: 16px;
+  font-weight: 700;
 }
 
 input[type=text]{
@@ -48,13 +49,14 @@ input[type=text]{
 
 .button:hover {
   background-color: rgba(255, 0,	0, 0.5);
+  transform:scale(1.1);
 }
 
 .message-container {
   border: 1px solid black;
   background-color: white;
   width: 380px;
-  padding: 15px;
+  padding: 25px;
   box-shadow: 5px 5px black;
   margin: 30px 0;
 }
@@ -64,8 +66,23 @@ input[type=text]{
   justify-content: space-between;
 }
 
+.heart-button {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color:rgba(208, 203, 203, 0.3);
+  border:none;
+  font-size:16px;
+}
+
+.heart-button:hover{
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
 .likes-icon-count {
   display: flex;
+  align-items: center;
 }
 
 .likes-icon-count > p {
