--- a/code/src/index.css
+++ b/code/src/index.css
@@ -43,8 +43,10 @@ code {
 /* THOUGHT CARD */
 .thought-div {
   border: 2px solid black;
-  margin: 10px;
-  padding: 10px;
+  width: 80%;
+  padding: 20px;
+  margin: 0 auto;
+  margin-top: 30px;
   box-shadow: 5px 5px 0px 0px #000000;
 }
 
