Added code so that messagelist list recent thoughts at the top, the message shows how many likes it has received and a heartbutton that sends likes on a message

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,21 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+.new-message-label {
+  font-family: Menlo;
+}
+
+/*** MESSAGES ***/
+.message-element-container {
+  border: solid 1px black;
+}
+
+.message-element-container .message {
+  overflow-wrap: break-word;
+}
+
+.heart-date-container {
+  display: flex;
+}
