--- a/code/src/index.css
+++ b/code/src/index.css
@@ -35,12 +35,14 @@ code {
 .submit-message-container {
   background-color: rgb(241, 239, 239);
   font-family: "Courier New";
+  font-weight: 600;
   font-size: 16px;
 }
 
 .label-input-message {
   margin: 10px;
 }
+
 .button-submit {
   background-color: rgb(255, 149, 149);
   border: none;
@@ -48,14 +50,39 @@ code {
   width: 50%;
   height: 35px;
   margin: 10px;
-  font-family:  "Courier New"; 
+  font-family:  "Courier New";
+  font-weight: 600;
 }
+
+.button-likes{
+  background-color: rgb(241, 239, 239);
+  border: none;
+  border-radius: 50%;
+  width: 35px;
+  height: 35px;
+  padding: 5px;
+  margin-right: 5px;
+}
+
+
 .message-input {
   width: 90%;
-  height: 40px;
+  min-height: 40px;
   margin: 10px;
   font-family: "Courier New";
   
+}
+
+.likes-date-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  
+}
+
+.hearts-likes-wrapper {
+  display: flex;
+  align-items: center;
 }
 
 .date-posted {
