--- a/code/src/components/Styles/ThoughtCard.css
+++ b/code/src/components/Styles/ThoughtCard.css
@@ -1,8 +1,66 @@
 .thought-card{
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-direction: column;
-    width: 100%;
+    width: 500px;
+    margin-top: 20px;
+    padding: 20px;
     text-align: left;
+    background: #eeeeee;
+    border: 1px black solid; 
+    box-shadow: 5px 10px; 
 }
+
+.thought-message{
+    display: flex;
+    flex-wrap: wrap;
+    width: 500px;
+}
+
+.thought-card-info{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.likes-container{
+    display: flex;
+    flex-direction: row;
+}
+
+.number-of-hearts {
+    margin-left: 8px;
+}
+.heart{
+    border: none;
+    display: flex;
+    font-size: 16px;
+    padding: 5px;
+}
+
+.button-liked{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px;
+    background: #ffadad;
+    border: none;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    cursor: pointer;
+}
+
+.button-unliked{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #D3D3D3;
+    padding: 8px;
+    border: none;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    cursor: pointer;
+}
+.created-at{
+    display: flex;
+}
+
