--- a/code/src/index.css
+++ b/code/src/index.css
@@ -15,3 +15,44 @@ code {
 .date {
   font-style: italic;
 }
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.happy-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  margin: 10px;
+  width: 500px;
+  border: 2px solid black;
+  box-shadow: 6px 6px;
+  padding: 10px;
+  margin: 10px;
+
+}
+
+.happy-card {
+  width: 500px;
+  border: 2px solid black;
+  box-shadow: 6px 6px;
+  padding: 10px;
+  margin: 10px;
+}
+
+.submit-button {
+  background: salmon;
+  border-radius: 15px;
+  padding: 10px;
+  margin: 10px;
+}
+
+.message-field {
+  margin: 10px;
+  padding: 10px;
+}
