--- a/code/src/index.css
+++ b/code/src/index.css
@@ -101,17 +101,18 @@ textarea {
 }
 
 .heartButton {
-  height: 32px;
-  width: 32px;
+/*   height: 32px;
+  width: 32px; */
   border: none;
   text-align: center;
   border-radius: 50%;
+  padding: 10px;
   margin-right: 5px;
 }
 
 .heart {
   font-size: 11px;
-  text-align: center;
+
 }
 
 .nrOfLikes {
@@ -134,12 +135,6 @@ textarea {
 .messageContent {
   width: 400px;
   min-height: 120px;
-}
-
-
-.heartButton {
-  height: 38px;
-  width: 38px;
 }
 
 .heart {
