Changed dubbel quotes to all single quotes. Added ternary operator on like button to change background once clicked.

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -71,6 +71,11 @@ input[type=text]{
   margin: 30px 0;
 }
 
+.message-text {
+  overflow-wrap: break-word;
+}
+
+
 .heart-date-container {
   display: flex;
   justify-content: space-between;
