--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", , "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -18,28 +18,57 @@ code {
   max-width: 500px;
 }
 .send-message-card {
-  /* width: 200px; */
- 
+  width: 100%;
   background-color: #F2F0F0;
-  border: 1px solid black;
-  box-shadow: 5px 5px black;
+  border: 1px solid #858585;
+  box-shadow: 5px 5px #000000;
   padding: 10px;
-  margin: 0;
+  
+  font-size: 20px;
 }
 .input-field { 
-  width:80%;
-  
-  overflow-wrap: break-word;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  overflow-wrap: break-word; /*  where should I add this??  */
   background-color: #ffffff;
-  margin: 20px;
+  /* padding: 5px 5px 20px 5px; */
+  border: 1px solid #dedcdc;
+  font-family:"Roboto";
+  font-size: 20px; 
 }
 .submit-button {
   background-color: #FFADAD;
+  border-radius: 10px;
+  border: none;
+  font-family: "Roboto";
+  font-size: 15px;
+  margin-top: 10px;
 }
 .GET-message {
-  overflow-wrap: break-word;
+  margin: 20px 0;
+  width:100%;
+  overflow-wrap: break-word; /* here too? */
+  background-color: #ffffff;
+  border: 1px solid #858585;
+  font-family:"Roboto";
+  padding-left: 10px;
+  box-shadow: 5px 5px #000000;
+  padding: 10px;
+  font-size: 20px;
 }
 .date {
-  font-size: 12px;
+  font-size: 10px;
   font-style: italic;
+  color: #CDCDCD;
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 15px;
 }
+.heart-like-button {
+  background-color: #EAEAEA;
+  border-radius: 50%;
+  
+}
+
